--- a/src/app/comp/main/navbar/navbar.component.html
+++ b/src/app/comp/main/navbar/navbar.component.html
@@ -78,6 +78,54 @@
                                 </label>
                             </div>
                         </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" formControlName="searchCertstore"
+                                    id="home-search-certstore" name="home-search-certstore">
+                                <label class="form-check-label" for="home-search-certstore">
+                                    {{ l10nphrase.search.topics.certstore }}
+                                </label>
+                            </div>
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" formControlName="searchServerConfig"
+                                    id="home-search-serverConfig" name="home-search-serverConfig">
+                                <label class="form-check-label" for="home-search-serverConfig">
+                                    {{ l10nphrase.search.topics.serverConfig }}
+                                </label>
+                            </div>
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" formControlName="searchServerInfo"
+                                    id="home-search-serverInfo" name="home-search-serverInfo">
+                                <label class="form-check-label" for="home-search-serverInfo">
+                                    {{ l10nphrase.search.topics.serverInfo }}
+                                </label>
+                            </div>
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" formControlName="searchIppDevices"
+                                    id="home-search-ippDevices" name="home-search-ippDevices">
+                                <label class="form-check-label" for="home-search-ippDevices">
+                                    {{ l10nphrase.search.topics.ippDevices }}
+                                </label>
+                            </div>
+                        </li>
+                        <li class="dropdown-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" formControlName="searchUsers"
+                                    id="home-search-users" name="home-search-users">
+                                <label class="form-check-label" for="home-search-users">
+                                    {{ l10nphrase.search.topics.users }}
+                                </label>
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <button class="btn btn-success text-nowrap" [disabled]="searchBusy" type="submit">{{ searchBusy ?
