--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 @import "bootstrap/scss/functions";
+
+$font-size-base: .85rem !default;
+
 @import "bootstrap/scss/variables";
 
 $primary: #E12327;
